--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
 		}
 
 		function TemperatureConversion(t,u){
+			var result = {};
 			if(u == "F"){
-				t1 = t * (9/5) + 32;
-				u1 = "Fahrenheit";
+				result.t1 = t * (9/5) + 32;
+				result.u1 = "Fahrenheit";
 			}else if(u == "K"){
-				t1 =  t + 273.15;
-				u1 = "Réaumur";
+				result.t1 =  t + 273.15;
+				result.u1 = "Réaumur";
 			}else if(u == "R"){
-				t1 = t * (4/5);
-				u1 = "Kelvin";
+				result.t1 = t * (4/5);
+				result.u1 = "Kelvin";
 			 }
+			 return result;
 		}
 	    $(document).ready(function(){
 			$("button").click(function(){
@@ -67,7 +69,7 @@
      
        		   var tc = TemperatureConversion(t,u);
 
-			   alert("Temperature is "+t1+" in "+u1);
+			 $("#result").html("Temperature is "+ tc.t1 +" in "+ tc.u1);
 			});
 		});
 	</script>
